# nnet-cpp

./: CMakeLists.txt  README.md  activation.h  cost.h  data.h  helpers.h  layer.cpp  layer.h  main.cpp  nnet.cpp  nnet.h  plot.cpp  plot.h
